# Project-Mittens

./: .gitignore  5002 - Project Mittens - Outline & Formulas.ipynb  Charts.ipynb  README.md  pyproject.toml  requirements.txt
Charts/: branching_factors.py  growth_of_complexity.py  player_a_performance.py  popular_games.py  possible_games.py  rating_projections.py
Deliverables/: Project Mittens - Progress Report.pages  Project Mittens - Proposal.pages
FIDE/: Analysis.ipynb  Dataframe.ipynb
FIDE/Data/: 1971.txt  1981.txt  1983.txt  1984.txt  1985.txt  1987.txt  1991.txt  1995.txt  1998.txt  2003.txt  2004.txt
FIDE/Data/CSVs/: 1971.csv  1972.csv  1973.csv  1974.csv  1975.csv  1976.csv  1977.csv  1978.csv  1979.csv  1980.csv  1981.csv  1982.csv  1983.csv  1984.csv  1985.csv  1986.csv  1987.csv  1988.csv  1989.csv  1990.csv  1991.csv  1992.csv  1993.csv  1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv  2000.csv  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  (+2 more)
FIDE/Data/Raw/: 1971.txt  1973.txt  1975.txt  1977.txt  1980.txt  1988.txt  1992.txt  1996.txt  1999.txt  2001.txt  2002.txt
FIDE/Raw/: 1972.txt  1974.txt  1976.txt  1978.txt  1979.txt  1982.txt  1986.txt  1989.txt  1990.txt  1993.txt  1994.txt  1997.txt  2000.txt
Outline Materials/: 5002 - Project Mittens - Outline & Formulas.ipynb
