[tool.poetry]
name          = "project mittens"
version       = "1.0.0"
description   = "An academic project exploring the impact of chess bots on player performance and Elo ratings, including a paper, visualizations, and data analysis."
authors       = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme        = "README.md"

[tool.poetry.dependencies]
python        = "^3.11"
matplotlib    = "3.7.1"
numpy         = "1.24.3"
pandas        = "2.0.1"
scikit-learn  = "1.2.2" 
scipy         = "*"
seaborn       = "0.12.2"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"